--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build and run
         run: |
-          docker compose -f compose.yml up -d --build
+          docker compose up --build
 
       - name: List running containers
         run: docker ps
