--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,13 @@ jobs:
         run: |
           docker compose up --build
 
-      - name: List running containers
-        run: docker ps
+      - name: Health check (Django)
+        run: curl --fail http://localhost:8000/ || exit 1
+
+      - name: Health check (Angular)
+        run: curl --fail http://localhost:4200/ || exit 1
+
+      - name: Shut down
+        if: always()
+        run: docker compose down
 
