--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build and run
         run: |
-          docker compose up --build
+          docker compose up -d --build
 
       - name: Health check (Django)
         run: curl --fail http://localhost:8000/ || exit 1
