Updated angular docker file

--- a/ArtMediaSite/Dockerfile
+++ b/ArtMediaSite/Dockerfile
@@ -2,12 +2,19 @@
 FROM node:18-alpine
 
 WORKDIR /app
+
+# Copy dependencies
 COPY package.json package-lock.json ./
 RUN npm install -g @angular/cli
 RUN npm install
+
+# Copy full source
 COPY . .
+
+# Build app
+RUN npm run build
 
 # Port 4200
 EXPOSE 4200
-CMD ["ng", "serve", "--host", "0.0.0.0"]
+CMD ["npm", "start", "--", "--host", "0.0.0.0"]
 
