--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Angular image
-        run: docker build -t angular-app ./frontend
+        run: docker build -t angular-app ./ArtMediaSite
 
       - name: Run Angular build
         run: docker run --rm angular-app
