--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         run: docker build -t angular-app ./ArtMediaSite
 
       - name: Build and run Django then exit
-        run: docker compose up --build --abort-on-container-exit --exit-code-from django
+        run: docker compose up --build --abort-on-container-exit --exit-code-from backend
 
       - name: Tear down containers
         if: always()
